--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-haml": "~0.1.1",
-    "grunt-contrib-coffee": "~0.8.0"
+    "grunt-contrib-coffee": "~0.8.0",
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-uglify": "~0.2.7"
   }
 }
